First level auto checked

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="levels">
       <label for="01">
         01
-        <input type="radio" name="level" id="01" value="01">
+        <input type="radio" name="level" id="01" value="01" checked>
       </label>
       <label for="02">
         02
